--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,22 @@
-<style>
-  h1 {
-    color: goldenrod;
-  }
-</style>
-
-<!-- Toolbar -->
-<div class="toolbar" role="banner"><h1>To Do</h1></div>
-
-<router-outlet></router-outlet>
+<header>Tasks</header>
+<main>
+  <div class="empty" *ngIf="tasks.length == 0">
+    <img src="../assets/img/task-32.svg" alt="" />
+    <p>Tasks show up here</p>
+  </div>
+  <div *ngIf="tasks.length > 0">
+    <ul>
+      <li *ngFor="let task of tasks">
+        <input type="checkbox" />
+        {{ task.name }}
+        <button class="delete-task-button">X</button>
+      </li>
+    </ul>
+  </div>
+</main>
+<footer>
+  <form [formGroup]="addTaskForm" (ngSubmit)="onSubmit()">
+    <input formControlName="name" type="text" />
+    <button type="submit" class="add-task-button">+</button>
+  </form>
+</footer>
