--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,10 @@
   </div>
   <div *ngIf="tasks.length > 0">
     <ul>
-      <li *ngFor="let task of tasks">
+      <li *ngFor="let task of tasks; let i = index">
         <input type="checkbox" />
         {{ task.name }}
-        <button class="delete-task-button">X</button>
+        <button (click)="deleteTask(i)" class="delete-task-button">X</button>
       </li>
     </ul>
   </div>
