--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,10 @@
   <div *ngIf="tasks.length > 0">
     <ul>
       <li *ngFor="let task of tasks; let i = index">
-        <input type="checkbox" />
-        {{ task.name }}
+        <input (change)="check($event)" type="checkbox" />
+        <p [ngClass]="{ checked: checkbox }">
+          {{ task.name }}
+        </p>
         <button (click)="deleteTask(i)" class="delete-task-button">X</button>
       </li>
     </ul>
