--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,6 +49,10 @@ main {
       background-color: #333;
       border-radius: 0.3rem;
 
+      p.checked {
+        text-decoration: line-through;
+      }
+
       .delete-task-button {
         padding: 12px 15px;
         background: none;
