--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,29 @@
-<header>Tasks</header>
-<main>
-  <div class="empty" *ngIf="tasks.length == 0">
-    <img src="../assets/img/task-32.svg" alt="" />
-    <p>Tasks show up here</p>
-  </div>
-  <div *ngIf="tasks.length > 0">
-    <ul>
-      <li *ngFor="let task of tasks; let i = index">
-        <input (change)="check($event)" type="checkbox" />
-        <p [ngClass]="{ checked: checkbox }">
-          {{ task.name }}
-        </p>
-        <button (click)="deleteTask(i)" class="delete-task-button">X</button>
-      </li>
-    </ul>
-  </div>
-</main>
-<footer>
-  <form [formGroup]="addTaskForm" (ngSubmit)="onSubmit()">
-    <input formControlName="name" type="text" />
-    <button type="submit" class="add-task-button">+</button>
-  </form>
-</footer>
+<div>
+  <header>Tasks</header>
+  <main>
+    <div class="empty" *ngIf="tasks.length == 0">
+      <img src="../assets/img/task-32.svg" alt="" />
+      <p>Tasks show up here</p>
+    </div>
+    <div *ngIf="tasks.length > 0">
+      <ul>
+        <li *ngFor="let task of tasks; let i = index">
+          <input
+            type="checkbox"
+            [checked]="task.checked"
+            (change)="check($event, i)" />
+          <p [ngClass]="task.checked ? 'checked' : 'unchecked'">
+            {{ task.name }}
+          </p>
+          <button (click)="deleteTask(i)" class="delete-task-button">X</button>
+        </li>
+      </ul>
+    </div>
+  </main>
+  <footer>
+    <form [formGroup]="addTaskForm" (ngSubmit)="onSubmit()">
+      <input formControlName="name" type="text" />
+      <button type="submit" class="add-task-button">+</button>
+    </form>
+  </footer>
+</div>
