--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,12 +3,23 @@
 :host {
   height: 100vh;
   width: 100vw;
+
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 
   padding: 24px;
+}
+
+div {
+  width: 90vw;
+  max-width: 500px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 header {
@@ -38,7 +49,7 @@ main {
   ul {
     width: 100%;
     li {
-      margin: 2px;
+      margin-bottom: 8px;
       padding: 8px 0 8px 8px;
       width: 100%;
       height: 40px;
