--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
       <p>Tasks show up here</p>
     </div>
     <div *ngIf="tasks.length > 0">
-      <ul>
-        <li *ngFor="let task of tasks; let i = index">
+      <ul cdkDropList (cdkDropListDropped)="drop($event)">
+        <li *ngFor="let task of tasks; let i = index" cdkDrag>
           <input
             type="checkbox"
             [checked]="task.checked"
