--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,32 +48,11 @@ main {
 
   ul {
     width: 100%;
-    li {
-      margin-bottom: 8px;
-      padding: 8px 0 8px 8px;
-      width: 100%;
-      height: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      list-style: none;
-      background-color: #333;
-      border-radius: 0.3rem;
+    overflow: hidden;
+    display: block;
 
-      p.checked {
-        text-decoration: line-through;
-      }
-
-      .delete-task-button {
-        padding: 12px 15px;
-        background: none;
-        border: none;
-
-        color: $danger-color;
-        cursor: pointer;
-        border-top-right-radius: 0.3rem;
-        border-bottom-right-radius: 0.3rem;
-      }
+    &.cdk-drop-list-dragging li:not(.cdk-drag-placeholder) {
+      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
     }
   }
 }
@@ -104,4 +83,58 @@ footer {
       cursor: pointer;
     }
   }
+}
+
+main ul li,
+.cdk-drag {
+  margin-bottom: 8px;
+  padding: 8px 0 8px 8px;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  background-color: #333;
+  border-radius: 0.3rem;
+  cursor: move;
+  position: relative;
+  z-index: 1;
+
+  &:last-child {
+    border: none;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  p.checked {
+    text-decoration: line-through;
+  }
+
+  .delete-task-button {
+    padding: 12px 15px;
+    background: none;
+    border: none;
+
+    color: $danger-color;
+    cursor: pointer;
+    border-top-right-radius: 0.3rem;
+    border-bottom-right-radius: 0.3rem;
+  }
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
