--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -1,5 +1,3 @@
-@import '../dist/scss/variables.scss';
-
 :host {
   height: 100vh;
   width: 100vw;
@@ -26,11 +24,23 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 
-  width: 100vw;
-
-  color: $tertiary-color;
+  width: 90vw;
+  max-width: 500px;
   font-size: 20px;
+
+  p {
+    margin: 0;
+  }
+
+  app-config {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    right: 0px;
+    cursor: pointer;
+  }
 }
 
 main {
@@ -59,29 +69,56 @@ main {
 
 footer {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   form {
     display: flex;
     width: 100%;
-    input {
-      width: 100%;
-      height: 32px;
-      background-color: rgb(41, 41, 41);
-      border: none;
-      border-top-left-radius: 0.3rem;
-      padding: 8px;
 
-      &:focus {
-        outline: none;
+    mat-form-field {
+      width: 100%;
+
+      mat-form-field-infix {
+        position: relative;
+      }
+
+      input {
+        width: 100%;
+        height: 8px;
+        border: none;
+        border-top-left-radius: 0.3rem;
+        padding: 8px;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      .add-task-button {
+        position: absolute;
+        font-size: 20px;
+        height: 60px;
+
+        bottom: 0px;
+        right: -10px;
+        border: none;
+        border-bottom-right-radius: 0.3rem;
+        border-radius: 0;
+        cursor: pointer;
       }
     }
+  }
 
-    .add-task-button {
-      padding: 8px 12px;
-      background: rgb(41, 41, 41);
-      border: none;
-      border-bottom-right-radius: 0.3rem;
-      cursor: pointer;
-    }
+  .delete-all {
+    color: #fff;
+    background: red;
+    padding: 2px 16px;
+    border: none;
+    border-radius: 0.3rem;
+
+    margin-top: 4px;
   }
 }
 
@@ -95,11 +132,13 @@ main ul li,
   align-items: center;
   justify-content: space-between;
   list-style: none;
-  background-color: #333;
+
   border-radius: 0.3rem;
   cursor: move;
   position: relative;
   z-index: 1;
+
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2);
 
   &:last-child {
     border: none;
@@ -117,8 +156,8 @@ main ul li,
     padding: 12px 15px;
     background: none;
     border: none;
+    color: red;
 
-    color: $danger-color;
     cursor: pointer;
     border-top-right-radius: 0.3rem;
     border-bottom-right-radius: 0.3rem;
