--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,67 @@
-@import './dist/scss/variables.scss';
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
 
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$first-angular-app-primary: mat.define-palette(mat.$indigo-palette);
+$first-angular-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$first-angular-app-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$first-angular-app-light-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $first-angular-app-primary,
+      accent: $first-angular-app-accent,
+      warn: $first-angular-app-warn,
+    ),
+  )
+);
+$first-angular-app-dark-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: $first-angular-app-primary,
+      accent: $first-angular-app-accent,
+      warn: $first-angular-app-warn,
+    ),
+  )
+);
+
+.dark-theme {
+  @include mat.all-component-themes($first-angular-app-dark-theme);
+}
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($first-angular-app-light-theme);
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: roboto;
-  font-weight: 400;
-  color: $tertiary-color;
 }
 
+html,
 body {
-  background: $primary-background-color;
-}
+  height: 100%;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+  &.dark-theme {
+    background-color: #222;
+    color: #fff;
+  }
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
