--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -1,3 +1,7 @@
+@use '@angular/material' as mat;
+
+$my-palette: mat.define-palette(mat.$gray-palette);
+
 :host {
   height: 100vh;
   width: 100vw;
@@ -56,9 +60,9 @@ main {
     }
   }
 
-  ul {
+  mat-list {
     width: 100%;
-    overflow: hidden;
+    overflow: visible;
     display: block;
 
     &.cdk-drop-list-dragging li:not(.cdk-drag-placeholder) {
@@ -73,9 +77,11 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
   form {
     display: flex;
     width: 100%;
+    border-radius: 0.3rem;
 
     mat-form-field {
       width: 100%;
@@ -122,8 +128,7 @@ footer {
   }
 }
 
-main ul li,
-.cdk-drag {
+mat-list-item {
   margin-bottom: 8px;
   padding: 8px 0 8px 8px;
   width: 100%;
@@ -132,16 +137,16 @@ main ul li,
   align-items: center;
   justify-content: space-between;
   list-style: none;
+  cursor: move;
 
   border-radius: 0.3rem;
-  cursor: move;
   position: relative;
   z-index: 1;
 
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2);
-
-  &:last-child {
-    border: none;
+  .wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   p {
