--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,51 +1,35 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-// Plus imports for other components in your app.
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$first-angular-app-primary: mat.define-palette(mat.$indigo-palette);
-$first-angular-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$first-angular-app-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$first-angular-app-light-theme: mat.define-light-theme(
+$light-primary: mat.define-palette(mat.$gray-palette, 50);
+$light-accent: mat.define-palette(mat.$gray-palette);
+$light-theme: mat.define-light-theme(
   (
     color: (
-      primary: $first-angular-app-primary,
-      accent: $first-angular-app-accent,
-      warn: $first-angular-app-warn,
+      primary: $light-primary,
+      accent: $light-accent,
     ),
   )
 );
-$first-angular-app-dark-theme: mat.define-dark-theme(
+
+$dark-primary: mat.define-palette(mat.$gray-palette, 900);
+$dark-accent: mat.define-palette(mat.$gray-palette, 200);
+$dark-theme: mat.define-dark-theme(
   (
     color: (
-      primary: $first-angular-app-primary,
-      accent: $first-angular-app-accent,
-      warn: $first-angular-app-warn,
+      primary: $dark-primary,
+      accent: $dark-accent,
     ),
   )
 );
+
+@include mat.all-component-themes($light-theme);
 
 .dark-theme {
-  @include mat.all-component-themes($first-angular-app-dark-theme);
+  @include mat.all-component-themes($dark-theme);
 }
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($first-angular-app-light-theme);
 * {
   margin: 0;
   padding: 0;
@@ -56,9 +40,17 @@ html,
 body {
   height: 100%;
 
+  mat-list-item {
+    background-color: mat.get-color-from-palette($light-primary);
+  }
+
   &.dark-theme {
-    background-color: #222;
-    color: #fff;
+    background-color: mat.get-color-from-palette($dark-primary);
+    color: mat.get-color-from-palette($dark-accent, 'text');
+
+    mat-list-item {
+      background-color: mat.get-color-from-palette($dark-primary, 700);
+    }
   }
 }
 body {
