--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -3,7 +3,7 @@
   <div class="toggle" [ngClass]="isDarkTheme ? 'active' : ''">
     <div class="slider">
       <div class="handle">
-        <img [src]="isDarkTheme ? sunIcon : moonIcon " alt="">
+        <img [src]="isDarkTheme ? moonIcon : sunIcon " alt="">
       </div>
     </div>
   </div>
